--- a/docs/docs/Crails/Template/partial.html
+++ b/docs/docs/Crails/Template/partial.html
@@ -2,6 +2,6 @@
 <p>Parameters:</p>
 <ul>
 <li>Path to the template to render</li>
-<li>Optional <a class="btn btn-outline-primary btn-sm btn-cpptype" data-cpptype="std::map<std::string, std::any>" href="#/typedef/std::map<std::string, std::any>" target="_self">SharedVars</a> containing variables to use when rendering the template</li>
+<li>Optional <a class="btn btn-outline-primary btn-sm btn-cpptype" data-cpptype="::SharedVars" href="" target="_self">SharedVars</a> containing variables to use when rendering the template</li>
 </ul>
-<p>The called template will be rendered using the same set of variables that was provided for the template calling <code>partial</code>. If a <a class="btn btn-outline-primary btn-sm btn-cpptype" data-cpptype="std::map<std::string, std::any>" href="#/typedef/std::map<std::string, std::any>" target="_self">SharedVars</a> parameter is provided, it will only overwrite variables that are present in both the current template variable and the parameter.</p>
+<p>The called template will be rendered using the same set of variables that was provided for the template calling <code>partial</code>. If a <a class="btn btn-outline-primary btn-sm btn-cpptype" data-cpptype="::SharedVars" href="" target="_self">SharedVars</a> parameter is provided, it will only overwrite variables that are present in both the current template variable and the parameter.</p>
